--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
         <title>Togji TAGBIA LOUEVIE - Site professionnel</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id natus recusandae reiciendis labore. Voluptas asperiores voluptatibus fugit aliquid facere culpa. Iusto, eligendi corporis aliquam impedit minus rerum consectetur assumenda ratione?</p>
-        <p> ipsum dolor sit amet, consectetur adipisicing elit. Minus porro, vit<hr>ae illum sit, dolor adipisci ratione pariatur soluta cum quos tempora. Tenetur, itaque! Nemo, eveniet error deserunt reprehenderit repudiandae atque?</p>
+        <!-- Encadré -->
+        <div id="wrapper">
+
+            <!-- Contenu principal -->
+            <main>
+                <div class="inner">
+
+                    <!-- En-tête contenu principal -->
+                    <header id="inner-header">
+                        <a href="index.html" class="logo"><strong>TTL</strong> Togji TAGBIA LOUEVIE</a>
+                        <ul class="icons">
+                            <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                            <li><a href="#" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
+                            <li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                        </ul>
+                    </header>
+
+                    <!-- Bannière -->
+                    <section id="banner">
+                        <div class="content">
+                            <header>
+                                <h1>Bienvenue sur mon site professionnel</h1>
+                            </header>
+                        </div>
+                    </section>
+                </div>
+            </main>
+        </div>
     </body>
 </html>
